--- a/.github/workflows/publish_assets.yml
+++ b/.github/workflows/publish_assets.yml
@@ -3,6 +3,9 @@ name: Upload Release Assets
 on:
   release:
     types: [ prereleased, released ]
+  push:
+    tags:
+      - 'v[0-9]*'
   workflow_dispatch:
 
 jobs:
