--- a/.github/workflows/update_credits.yml
+++ b/.github/workflows/update_credits.yml
@@ -19,18 +19,18 @@ jobs:
           contributor_name=$(jq -r '.pull_request.user.login' $GITHUB_EVENT_PATH)
           pr_description=$(jq -r '.pull_request.body' $GITHUB_EVENT_PATH)
           
-          echo "### Timestamp:" >> credits.md
-          echo "$(date -u +"%Y-%m-%dT%H:%M:%SZ")" >> credits.md
-          echo "### Contributor:" >> credits.md
-          echo "${{ github.event.pull_request.user.login }}" >> credits.md
-          echo "#### PR Title:" >> credits.md
-          echo "${{ github.event.pull_request.title }}" >> credits.md
-          echo "############################################" >> credits.md
+          echo "### Timestamp:" >> .github/credits.md
+          echo "$(date -u +"%Y-%m-%dT%H:%M:%SZ")" >> .github/credits.md
+          echo "### Contributor:" >> .github/credits.md
+          echo "${{ github.event.pull_request.user.login }}" >> .github/credits.md
+          echo "#### PR Title:" >> .github/credits.md
+          echo "${{ github.event.pull_request.title }}" >> .github/credits.md
+          echo "############################################" >> .github/credits.md
           
           git add credits.md
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git commit -m "Update credits.md with contributor information" || exit 0
-          git push
+          git push origin HEAD:<name-of-remote-branch>
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
