--- a/.github/workflows/update_credits.yml
+++ b/.github/workflows/update_credits.yml
@@ -1,20 +1,20 @@
-name: Update Credits upon opening PR
+name: Update Credits upon merging PR
 
 on:
   pull_request:
     branches:
       - master
     types:
-      - opened
-      - synchronize
+      - closed
 
 jobs:
   update-credits:
     runs-on: ubuntu-latest
+    if: github.event.pull_request.merged == true
     steps:
       - uses: actions/checkout@v4
         with:
-          ref: ${{ github.event.pull_request.head.ref }}
+          ref: master
       - run: |
           contributor_name=$(jq -r '.pull_request.user.login' $GITHUB_EVENT_PATH)
           pr_description=$(jq -r '.pull_request.body' $GITHUB_EVENT_PATH)
@@ -31,6 +31,6 @@ jobs:
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git commit -m "Update credits.md with contributor information"
-          git push origin ${{ github.event.pull_request.head.ref }}
+          git push origin master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
