--- a/.github/workflows/update_credits.yml
+++ b/.github/workflows/update_credits.yml
@@ -2,30 +2,24 @@ name: Update Credits upon merging PR
 
 on:
   pull_request:
-    branches:
-      - master
     types:
-      - closed
+      - opened
 
 jobs:
   update-credits:
     runs-on: ubuntu-latest
-    if: github.event.pull_request.merged == true
     steps:
       - uses: actions/checkout@v4
         with:
           ref: master
       - run: |
-          contributor_name=$(jq -r '.pull_request.user.login' $GITHUB_EVENT_PATH)
-          pr_description=$(jq -r '.pull_request.body' $GITHUB_EVENT_PATH)
-
           echo "### Timestamp:" >> .github/credits.md
           echo "$(date -u +"%Y-%m-%dT%H:%M:%SZ")" >> .github/credits.md
           echo "### Contributor:" >> .github/credits.md
           echo "${{ github.event.pull_request.user.login }}" >> .github/credits.md
           echo "#### PR Title:" >> .github/credits.md
           echo "${{ github.event.pull_request.title }}" >> .github/credits.md
-          echo "############################################" >> .github/credits.md
+          echo "########################################################################################x" >> .github/credits.md
 
           git add .github/credits.md
           git config --local user.email "action@github.com"
