changes should be pushed on to current branch

--- a/.github/workflows/update_credits.yml
+++ b/.github/workflows/update_credits.yml
@@ -28,6 +28,6 @@ jobs:
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git commit -m "Update credits.md with contributor information"
-          git push origin master
+          git push origin HEAD
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
