--- a/.github/workflows/update_credits.yml
+++ b/.github/workflows/update_credits.yml
@@ -20,6 +20,8 @@ jobs:
           echo "$(date -u +"%Y-%m-%dT%H:%M:%SZ")" >> .github/credits.md
           echo "### Contributor:" >> .github/credits.md
           echo "${{ github.event.pull_request.user.login }}" >> .github/credits.md
+          echo "#### PR Number:" >> .github/credits.md
+          echo "${{ github.event.pull_request.number }}" >> .github/credits.md
           echo "#### PR Title:" >> .github/credits.md
           echo "${{ github.event.pull_request.title }}" >> .github/credits.md
           echo "########################################################################################x" >> .github/credits.md
