--- a/.github/workflows/package_installers.yml
+++ b/.github/workflows/package_installers.yml
@@ -49,6 +49,9 @@ jobs:
           # can resolve the most recent version tag.
           fetch-depth: 0
 
+      - name: Get short commit hash
+        run: echo "SHORT_SHA=$(git rev-parse --short ${{ github.sha }})" >> $GITHUB_ENV
+
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
@@ -143,7 +146,7 @@ jobs:
         if: ${{ matrix.os == 'ubuntu-latest' }}
         uses: actions/upload-artifact@v3
         with:
-          name: "gtfs-validator-cli-${{ github.sha }}"
+          name: "gtfs-validator-cli-${{ env.SHORT_SHA }}"
           path: cli/build/libs/gtfs-validator-*-cli.jar
 
       - name: "Upload Installer"
