--- a/.github/workflows/package_installers.yml
+++ b/.github/workflows/package_installers.yml
@@ -146,7 +146,7 @@ jobs:
         if: ${{ matrix.os == 'ubuntu-latest' }}
         uses: actions/upload-artifact@v4
         with:
-          name: "gtfs-validator-cli-${{ env.SHORT_SHA }}"
+          name: "gtfs-validator-cli-${{ env.SHORT_SHA }}.zip"
           path: cli/build/libs/gtfs-validator-*-cli.jar
 
       - name: "Upload Installer"
