setup spring cloud gcp logging

--- a/web/service/build.gradle
+++ b/web/service/build.gradle
@@ -64,6 +64,8 @@ dependencies {
   implementation 'org.projectlombok:lombok:1.18.22'
   implementation 'io.sentry:sentry-spring-boot-starter:6.18.1'
   implementation 'io.sentry:sentry-logback:6.18.1'
+  implementation 'org.springframework.cloud:spring-cloud-gcp-starter-logging:1.2.8.RELEASE'
+
   testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
