--- a/web/service/build.gradle
+++ b/web/service/build.gradle
@@ -64,7 +64,7 @@ dependencies {
   implementation 'org.projectlombok:lombok:1.18.22'
   implementation 'io.sentry:sentry-spring-boot-starter:6.18.1'
   implementation 'io.sentry:sentry-logback:6.18.1'
-  implementation 'org.springframework.cloud:spring-cloud-gcp-starter-logging:1.2.8.RELEASE'
+  implementation 'com.google.cloud:spring-cloud-gcp-starter-logging:2.0.0'
 
   testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
@@ -72,7 +72,6 @@ dependencies {
 dependencyManagement {
 	imports {
 		mavenBom "com.google.cloud:spring-cloud-gcp-dependencies:${springCloudGcpVersion}"
-		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
 	}
 }
 
