--- a/.github/workflows/web_client_test.yml
+++ b/.github/workflows/web_client_test.yml
@@ -14,6 +14,8 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Cypress run
-        uses: cypress-io/github-action@v5
+        uses: cypress-io/github-action@v6
         with:
+          start: npm run dev
+          wait-on: "npx wait-on --timeout 120000 http://127.0.0.1:5173"
           working-directory: ./web/client
