--- a/web/client/package.json
+++ b/web/client/package.json
@@ -34,7 +34,8 @@
     "svelte-check": "^2.9.2",
     "tailwindcss": "^3.2.4",
     "typescript": "^4.9.3",
-    "vite": "^4.0.0"
+    "vite": "^4.0.0",
+    "wait-on": "^7.2.0"
   },
   "type": "module"
 }
