changing cypress localhost address

--- a/.github/workflows/web_client_test.yml
+++ b/.github/workflows/web_client_test.yml
@@ -16,6 +16,6 @@ jobs:
       - name: Cypress run
         uses: cypress-io/github-action@v6
         with:
-          start: npm run dev
+          start: npx vite --host 127.0.0.1 --port 5173
           wait-on: "npx wait-on --timeout 120000 http://127.0.0.1:5173"
           working-directory: ./web/client
