--- a/web/client/package.json
+++ b/web/client/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "npm run dev",
     "dev": "vite dev",
+    "start:cypress:config": "vite --config vite.config-cypress.js",
     "build": "vite build",
     "preview": "vite preview",
     "check": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json",
@@ -17,7 +18,7 @@
   "devDependencies": {
     "@sveltejs/adapter-static": "^1.0.0",
     "@sveltejs/kit": "^1.15.1",
-    "@types/lodash": "^4.14.194",
+    "@types/lodash": "^4.14.202",
     "@types/marked": "^4.0.8",
     "autoprefixer": "^10.4.13",
     "cypress": "^13.6.6",
@@ -25,7 +26,7 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-svelte3": "^4.0.0",
     "lodash": "^4.17.21",
-    "marked": "^4.2.12",
+    "marked": "^12.0.0",
     "postcss": "^8.4.20",
     "postcss-import": "^15.1.0",
     "prettier": "^2.8.0",
