--- a/.github/workflows/web_svc_pr.yml
+++ b/.github/workflows/web_svc_pr.yml
@@ -7,6 +7,9 @@ on:
     paths:
       - 'web/service/**'
 
+env:
+    NODE_VERSION: "20"
+
 jobs:
 
   web_ci:
@@ -36,7 +39,7 @@ jobs:
       # for npm
       - uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: ${{ env.NODE_VERSION }}
 
       - uses: google-github-actions/auth@v1
         with:
