--- a/.github/workflows/web_release.yml
+++ b/.github/workflows/web_release.yml
@@ -4,6 +4,9 @@ on:
   release:
     types: [ released ]
 
+env:
+  NODE_VERSION: "20"
+
 jobs:
 
   web_pipeline:
@@ -33,7 +36,7 @@ jobs:
       # for npm
       - uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: ${{ env.NODE_VERSION }}
 
       - uses: google-github-actions/auth@v1
         with:
