--- a/.github/workflows/web_client_test.yml
+++ b/.github/workflows/web_client_test.yml
@@ -12,11 +12,12 @@ env:
 jobs:
   cypress-run:
     runs-on: ubuntu-latest
+    name: Cypress e2e tests
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      - uses: actions/setup-node@v3
+      - uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
 
