--- a/.github/workflows/web_release.yml
+++ b/.github/workflows/web_release.yml
@@ -4,6 +4,9 @@ on:
   release:
     types: [ released ]
 
+env:
+  NODE_VERSION: "20"
+
 jobs:
 
   web_pipeline:
@@ -16,14 +19,14 @@ jobs:
 
     steps:
 
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           # We need to download all tags so that the axion-release-plugin
           # can resolve the most recent version tag.
           fetch-depth: 0
 
       - name: Set up JDK 17
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
           # We need a recent version of Java with jpackage included.
           java-version: '17'
@@ -31,15 +34,15 @@ jobs:
           distribution: 'zulu'
 
       # for npm
-      - uses: actions/setup-node@v3
+      - uses: actions/setup-node@v4
         with:
-          node-version: 16
+          node-version: ${{ env.NODE_VERSION }}
 
-      - uses: google-github-actions/auth@v1
+      - uses: google-github-actions/auth@v2
         with:
           credentials_json: ${{ secrets.GCP_WEB_VALIDATOR_SA_KEY }}
 
-      - uses: google-github-actions/setup-gcloud@v1
+      - uses: google-github-actions/setup-gcloud@v2
         with:
           version: '>= 390.0.0'
 
