feat: 1651 web validator retries with bad zip file 2 (#1686)
* setup spring cloud gcp logging

* ignore annoying tests

* updated logback

* modified dependencies

* rename the stack driver log package name

* revert: deploy to master

* Detect when the Spring context is deployed in the cloud vs local. In the cloud, use the CONSOLE_JSON appended, and in local STDOUT

* removed useless code

* formatted code

---------

Co-authored-by: David Gamez Diaz <1192523+davidgamez@users.noreply.github.com>

--- a/web/service/build.gradle
+++ b/web/service/build.gradle
@@ -64,13 +64,14 @@ dependencies {
   implementation 'org.projectlombok:lombok:1.18.22'
   implementation 'io.sentry:sentry-spring-boot-starter:6.18.1'
   implementation 'io.sentry:sentry-logback:6.18.1'
+  implementation 'com.google.cloud:spring-cloud-gcp-starter-logging:3.7.9'
+
   testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
 dependencyManagement {
 	imports {
 		mavenBom "com.google.cloud:spring-cloud-gcp-dependencies:${springCloudGcpVersion}"
-		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
 	}
 }
 
