Improved error handling

--- a/.github/workflows/stg_web_svc_merge.yml
+++ b/.github/workflows/stg_web_svc_merge.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - master
+      - 1688-create-execution_resultjson-file-for-web-validator-jobs
   workflow_dispatch:
 
 env:
