--- a/.github/workflows/web_client_pr.yml
+++ b/.github/workflows/web_client_pr.yml
@@ -6,6 +6,7 @@ on:
       - master
     paths:
       - 'web/client/**'
+      - '.github/workflows/web_client_pr.yml'
 
 env:
   NODE_VERSION: "20"
@@ -40,14 +41,6 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
-
-      - uses: google-github-actions/auth@v2
-        with:
-          credentials_json: ${{ secrets.GCP_WEB_VALIDATOR_SA_KEY }}
-
-      - uses: google-github-actions/setup-gcloud@v2
-        with:
-          version: '>= 390.0.0'
 
       - name: run gradle tasks
         shell: bash
