test filtering out acceptance tests

--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -14,6 +14,8 @@ on:
       - 'triage.yml'
       - 'end_to_end.yml'
       - 'web/**'
+      - '.github/workflows/web_**.yml'
+      - '.github/workflows/stg_web_**.yml'
 concurrency:
   group: ${{ github.head_ref }}
   cancel-in-progress: true
