fixed broken cypress test

--- a/.github/workflows/stg_web_svc_merge.yml
+++ b/.github/workflows/stg_web_svc_merge.yml
@@ -3,7 +3,7 @@ name: Web service staging CD
 on:
   push:
     branches:
-      - master
+      - 1689-web-validator-app-consumes-execution_resultsjson
   workflow_dispatch:
 
 env:
