--- a/.github/workflows/stg_web_svc_merge.yml
+++ b/.github/workflows/stg_web_svc_merge.yml
@@ -10,15 +10,17 @@ env:
   NODE_VERSION: "20"
 
 jobs:
+
   web_cd:
     name: Deploy web service
     runs-on: ubuntu-latest
 
     env:
-      ENV_NAME: stg
-      CLOUDSDK_CORE_PROJECT: web-based-gtfs-validator
+      ENV_NAME              : stg
+      CLOUDSDK_CORE_PROJECT : web-based-gtfs-validator
 
     steps:
+
       - uses: actions/checkout@v4
         with:
           # We need to download all tags so that the axion-release-plugin
@@ -29,9 +31,9 @@ jobs:
         uses: actions/setup-java@v4
         with:
           # We need a recent version of Java with jpackage included.
-          java-version: "17"
+          java-version: '17'
           # We use the zulu distribution, which is an OpenJDK distro.
-          distribution: "zulu"
+          distribution: 'zulu'
 
       # for npm
       - uses: actions/setup-node@v4
@@ -44,7 +46,7 @@ jobs:
 
       - uses: google-github-actions/setup-gcloud@v1
         with:
-          version: ">= 390.0.0"
+          version: '>= 390.0.0'
 
       - name: run gradle tasks
         shell: bash
