--- a/.github/workflows/stg_web_client_merge.yml
+++ b/.github/workflows/stg_web_client_merge.yml
@@ -2,9 +2,8 @@ name: Web client staging CD
 
 on:
   push:
-#    branches:
-#      - master
-#      - '*'
+    branches:
+      - master
   workflow_dispatch:
 
 env:
