--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -56,7 +56,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Set up JDK 11
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
           java-version: '11'
           distribution: 'temurin'
@@ -88,7 +88,7 @@ jobs:
         with:
           ref: master
       - name: Set up JDK 11
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
           java-version: '11'
           distribution: 'temurin'
@@ -159,7 +159,8 @@ jobs:
       - name: Extract and concatenate IDs
         run: |
           matrix_data='[${{ matrix.data }}]'
-          ids=$(echo "$matrix_data" | jq -r '.[].id')
+          formatted_matrix_data=$(echo "$matrix_data" | sed 's/} {/}, {/g')
+          ids=$(echo "$formatted_matrix_data" | jq -r '.[].id')
           concatenated_ids=""
           for id in $ids; do
             number=$(echo "$id" | grep -oE '[0-9]+$')
@@ -170,7 +171,6 @@ jobs:
             fi
           done
           echo "CONCATENATED_ID=$concatenated_ids" >> $GITHUB_ENV
-
       - name: Persist reports
         uses: actions/upload-artifact@v4
         with:
