--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -61,13 +61,13 @@ jobs:
           java-version: '11'
           distribution: 'temurin'
       - name: Cache Gradle packages
-        uses: actions/cache@v3
+        uses: actions/cache@v4
         with:
           path: ~/.gradle/caches
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
           restore-keys: ${{ runner.os }}-gradle
       - name: Package cli app jar with Gradle
-        uses: gradle/gradle-build-action@v2
+        uses: gradle/actions/setup-gradle@v3
         with:
           arguments: shadowJar
       - name: Persist gtfs-validator snapshot jar
@@ -93,13 +93,13 @@ jobs:
           java-version: '11'
           distribution: 'temurin'
       - name: Cache Gradle packages
-        uses: actions/cache@v3
+        uses: actions/cache@v4
         with:
           path: ~/.gradle/caches
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
           restore-keys: ${{ runner.os }}-gradle
       - name: Package cli app jar with Gradle
-        uses: gradle/gradle-build-action@v2
+        uses: gradle/actions/setup-gradle@v3
         with:
           arguments: shadowJar
       - name: Persist gtfs-validator jar from master branch
@@ -158,23 +158,12 @@ jobs:
           OUTPUT_BASE: ${{ github.sha }}
       - name: Extract and concatenate IDs
         run: |
-          matrix_data='[${{ matrix.data }}]'
-          formatted_matrix_data=$(echo "$matrix_data" | sed 's/} {/}, {/g')
-          ids=$(echo "$formatted_matrix_data" | jq -r '.[].id')
-          concatenated_ids=""
-          for id in $ids; do
-            number=$(echo "$id" | grep -oE '[0-9]+$')
-            if [ -z "$concatenated_ids" ]; then
-              concatenated_ids="$number"
-            else
-              concatenated_ids="${concatenated_ids}_$number"
-            fi
-          done
-          echo "CONCATENATED_ID=$concatenated_ids" >> $GITHUB_ENV
+          concatenated_ids=$(bash ./scripts/extract_ids.sh '${{ matrix.data }}')
+          echo "CONCATENATED_IDS=$concatenated_ids" >> $GITHUB_ENV
       - name: Persist reports
         uses: actions/upload-artifact@v4
         with:
-          name: reports_${{ env.CONCATENATED_ID }}
+          name: reports_${{ env.CONCATENATED_IDS }}
           path: ${{ github.sha }}/output
   merge-reports-artifacts:
      runs-on: ubuntu-latest
@@ -186,7 +175,7 @@ jobs:
            name: reports_all
            pattern: reports_*
   compare-outputs:
-    needs: [ get-reports ]
+    needs: [ merge-reports-artifacts ]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
